<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RadioMan</string>
    <string name="tab_markings">Маркировки</string>
    <string name="tab_calculations">Расчёты</string>
    <string name="tab_handbook">Справочник</string>
    <string name="tab_help">Помощь</string>
    <string name="placeholder_section">Этот раздел в процессе наполнения и скоро появится!</string>
    <string name="invalid_input">Неверный ввод!</string>
    <string name="calculate">Рассчитать</string>
    <string name="result">Результат:</string>
    <string name="add">Добавить</string>
    <string name="reset">Сбросить</string>
    <string name="loading">Загрузка…</string>
    <string name="resistors">Резисторы</string>
    <string name="capacitors">Конденсаторы</string>
    <string name="th_resistors">Резисторы сквозного монтажа</string>
    <string name="smd_resistors">SMD резисторы</string>
    <string name="th_capacitors">Конденсаторы сквозного монтажа</string>
    <string name="smd_capacitors">SMD конденсаторы</string>
    <string name="select_band_count">Выберите количество полос:</string>
    <string name="marking_hint">Маркировка</string>
    <string name="converter_title">Конвертер величин</string>
    <string name="led_title">Расчёт резисторов для светодиодов</string>
    <string name="inductor_select_title">Расчёт катушки индуктивности</string>
    <string name="parallel_resistor_title">Параллельное соединение резисторов</string>
    <string name="serial_capacitor_title">Последовательное соединение конденсаторов</string>
    <string name="voltage_divider_title">Делитель напряжения</string>
    <string name="lm_regulator_title">LM317/LM350/LM338 калькулятор</string>
    <string name="theory">Теория</string>
    <string name="schematics">Обозначения на схемах</string>
    <string name="pinout">Распиновки</string>
    <string name="connections">Типы соединений</string>
    <string name="chips">Микроссхемы и компоненты</string>
    <string name="lifehacks">Лайфхаки</string>
    <string name="how_to">Как пользоваться</string>
    <string name="about">О программе</string>
    <string name="chips_analogs">Аналоги отечественных микросхем</string>
    <string name="how_to_text">Пользоваться приложением достаточно просто.\n\nВ нижней части расположены вкладки для навигации по разделам. Внутри раздела навигация осуществляется по соответствующим ссылкам и с помощью кнопки «назад».\n\nВсе значения выбираются или из выпадающего списка (как в маркировке резисторов), или вводятся с клавиатуры.\n\nВАЖНО! Десятичным разделителем является точка! «0.5» — правильно, «0,5» — неправильно.\n\nТам, где это возможно, расчёт производится автоматически. Если результат не отобразился — нужно нажать «Ввод» с клавиатуры (Enter) или кнопку «Рассчитать».</string>
    <string name="about_text">Идея программы родилась вместе с тем, как я увлёкся радиолюбительством. Всегда было неудобно искать информацию в разных источниках и пользоваться приложениями, где что-то есть, а чего-то нет. Поэтому я решил сделать своё приложение, где решил собрать всю необходимую информацию в одном месте.\n\nПожелания и отзывы можно направить по почте electronics@hand-made-tlt.ru.</string>
    <string name="about_donation">Приложение доступно абсолютно безвозмездно. Но при желании вы можете поддержать автора.</string>
    <string name="source_code">Исходный код</string>
    <string name="support_author">поддержать автора</string>
    <string name="email">electronics@hand-made-tlt.ru</string>
    <string name="non_convertible">Непереводимые величины</string>
    <string name="from">Из</string>
    <string name="to">В</string>
    <string name="inductor_by_params">Расчёт индуктивности по параметрам</string>
    <string name="inductor_by_inductance">Расчёт размеров по индуктивности</string>
    <string name="divider_by_voltage">Расчёт выходного напряжения</string>
    <string name="divider_by_resistance">Расчёт сопротивлений</string>
    <string name="lm_voltage">Расчёт выходного напряжения</string>
    <string name="lm_current">Расчёт выходного тока</string>
    <string name="th_marking">TH маркировка</string>
    <string name="smd_marking">SMD маркировка</string>
</resources>
